[package]
name = "move-analyzer"
version = "1.0.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "A language server for Move"
repository = "https://github.com/move-language/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.2"
im = "15.1.0"
lsp-server = "0.5.1"
lsp-types = "0.90.1"
petgraph = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
url = "2.2.2"
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8"
move-command-line-common = { path = "../move-command-line-common" }
move-compiler = { path = "../move-compiler" }
move-ir-types = { path = "../move-ir/types" }
move-package = { path = "../tools/move-package" }
move-symbol-pool = { path = "../move-symbol-pool" }

# yunji add =====================
hex = "0.4.3"
rand = "0.8.3"
memory-stats = "1.0.0"
parking_lot = "0.11.1"
sha3 = "0.9.1"

move-core-types = {path = "../move-core/types" }
move-binary-format = { path = "../move-binary-format" }
move-bytecode-verifier = { path = "../move-bytecode-verifier" }

move-vm-runtime = { path = "../move-vm/runtime" }
move-vm-types = { path = "../move-vm/types" }
move-vm-test-utils = { path = "../move-vm/test-utils" }
move-stdlib = { path = "../move-stdlib" }
move-table-extension = { path = "../extensions/move-table-extension", optional = true }
move-vm-integration-tests = { path = "../move-vm/integration-tests" }

#move-compiler = { path = "../move-compiler" }
#serde = { version="1.0", features = ["derive"] }
tracing = "0.1.26"


#[dependencies.proc-macro2]
#version = "1.0"
#
#[dependencies.quote]
#version = "1.0"
#
#[dependencies.syn]
#version = "2"
#features = [
#    "derive",
#    "parsing",
#]


[dependencies.fuzzcheck]
path="/home/y23kim/rust/fuzzcheck-rs/fuzzcheck"
#path="/home/y23kim/rust/new_fuzzcheck/fuzzcheck-pathcov/fuzzcheck"
# yunji add ===================

[features]
address20 = ["move-compiler/address20"]
address32 = ["move-compiler/address32"]

#[[bin]]
#name="address"
#paht = "src/bin/yj_main3.rs"
