[package]
name = "move-vm-integration-tests"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move VM Integration Tests"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
tempfile = "3.2.0"
memory-stats = "1.0.0"

move-core-types = {path = "../../move-core/types" }
move-binary-format = { path = "../../move-binary-format" }
move-bytecode-verifier = { path = "../../move-bytecode-verifier" }
move-compiler = { path = "../../move-compiler" }
move-vm-runtime = { path = "../runtime" }
move-vm-types = { path = "../types" }
move-vm-test-utils = { path = "../test-utils" }
move-stdlib = { path = "../../move-stdlib" }
move-table-extension = { path = "../../extensions/move-table-extension", optional = true }
# yunji add
serde = { version="1.0", features = ["derive"] }

[dependencies.fuzzcheck]
path="/home/y23kim/rust/fuzzcheck-rs/fuzzcheck"

[features]
default = []
table-extension = [
    "move-table-extension",
    "move-vm-test-utils/table-extension"
]

[lib]
name = "yj"
path = "src/lib.rs"

# yj added
#[[bin]]
#name = "instantiation"
#path = "src/tests/instantiation_tests.rs"
